# MagPhsT2

./: CMakeLists.txt  README.md  T2T1AM.py  epg.cpp  epg.h  epg.pxd  equation_grep.py  examples.ipynb  main.cpp  pyepg.cpp  pyepg.pyx  setup.py
